# CrashDataRefiner

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  launch_gui.pyw  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: qc.yml
crash_data_refiner/: __init__.py  agent_hub.py  api.py  cli.py  coordinate_recovery.py  geo.py  gui.py  kmz_report.py  labeling.py  map_report.py  normalize.py  output_paths.py  pdf_report.py  pipeline.py  refiner.py  run_contract.py  services.py  spreadsheets.py  summary_report.py  web_files.py  web_review.py  web_state.py  web_summary.py  webapp.py
crash_data_refiner/web/: app.css  app.js  index.html
deploy/windows/: README.md  WEB-SVR03-CHECKLIST.md  crash-data-refiner.env.example  register-crash-data-refiner-task.ps1  run-crash-data-refiner.ps1  web-svr03.app.env
docs/: README.md
outputs-for-reference/: 1234567_CrashData_refined.xlsx  2101166_Example KMZ_Crash Data.kmz
raw-crash-data-for-reference/: 2100238_Crash-Data_2022-10-17.xlsx  2101166_Crash-Data.xlsx  EngRpt CrashData 2401490.xlsx  GrandHoward2019-21.xlsx
raw-crash-data-for-reference/20H00010H/: 20H0010H Boundary.kmz  CrashData_TiptonCounty2019-21.xlsx
raw-crash-data-for-reference/2100235/: 2100235 Boundary.kmz  SR 43 accidents Honeycreek big creek and prairie.xlsx
raw-crash-data-for-reference/2100238/: 2100238 Boundary.kmz
raw-crash-data-for-reference/2101166/: 2101166_Relevance Boundary.kmz
scripts/: bootstrap.ps1  check-repo-hygiene.sh  playwright_skill_audit.sh  qc_browser_smoke.mjs  qc_reference_datasets.py  run_api.ps1  run_refiner_test.py  run_tests.py  run_web.ps1
tests/: test_coordinate_recovery.py  test_geo.py  test_normalize_and_services.py  test_pdf_report.py  test_reference_fixtures.py  test_refiner.py  test_run_contract.py  test_webapp_config.py  test_webapp_health.py  test_webapp_review_queue.py  test_webapp_review_wizard.py  test_webapp_state.py
tests/data/: raw_crashes.csv
tests/refiner_inputs/: 2101166_Relevance Boundary.kmz
tests/refiner_outputs/: 2101166_Crash-Data_Crash Data.kmz  (+2 more)
